@@ -1,3 +1,6 @@
+2008/09/18
+  Bugfix: ffmpeg will crash if Audio Device is alreay in use!
+
 2008/09/15
   Add: Kill Signal
   Add: ffmpeg -xerror option
